syntax = "proto3";

package access_v1;

import "google/protobuf/empty.proto";

option go_package = "https://github.com/romanfomindev/microservices-auth/pkg/access_v1;access_v1";

service AccessService {
    rpc Check(CheckRequest) returns (google.protobuf.Empty) {}
}

message CheckRequest {
    string endpoint_address = 1;
}
